Ex01 done, Exceptions suck

--- a/moduleFive/ex01/Makefile
+++ b/moduleFive/ex01/Makefile
@@ -1,5 +1,5 @@
-NAME= bCratz
-SRC= Bureucrat.cpp  main.cpp
+NAME= bCratz2
+SRC= Bureucrat.cpp Forms.cpp main.cpp
 FLAGS= -Wextra -Werror -Wall -std=c++98
 
 all: $(NAME)
