wont compile ofstream

--- a/moduleFive/ex02/Makefile
+++ b/moduleFive/ex02/Makefile
@@ -1,5 +1,5 @@
 NAME= bCratz2
-SRC= Bureucrat.cpp Forms.cpp main.cpp
+SRC= Bureucrat.cpp AForm.cpp PresidentialPardon.cpp ShrubberyCreation.cpp VasectomyRequest.cpp main.cpp
 FLAGS= -Wextra -Werror -Wall -std=c++98
 
 all: $(NAME)
