--- a/moduleFive/ex00/Makefile
+++ b/moduleFive/ex00/Makefile
@@ -5,9 +5,11 @@ FLAGS= -Wextra -Werror -Wall -std=c++98
 all: $(NAME)
 
 $(NAME):
-	g++ $(FLAGS) $(SRC) -o $(NAME)
+	@g++ $(FLAGS) $(SRC) -o $(NAME)
+	@echo ...About to get bored by Bureucracy...
 
 fclean:
-	rm -f $(NAME)
+	@rm -f $(NAME)
+	@echo ...Mush on the pavement, time to clean up...
 
 re: fclean all
