--- a/moduleFour/ex02/Makefile
+++ b/moduleFour/ex02/Makefile
@@ -5,9 +5,10 @@ FLAGS= -Wextra -Werror -Wall -std=c++98
 all: $(NAME)
 
 $(NAME):
-	g++ $(FLAGS) $(SRC) -o $(NAME)
+	@g++ $(FLAGS) $(SRC) -o $(NAME)
+	@echo ...Weather Report says its about to rain Cats & Dogs...
 
 fclean:
-	rm -f $(NAME)
-
+	@rm -f $(NAME)
+	@echo ...Dog Catcha cleanin up the streetzzz...
 re: fclean all
