--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,5 +67,6 @@
         "locale": "cpp",
         "mutex": "cpp",
         "ratio": "cpp"
-    }
+    },
+    "files.autoSave": "onFocusChange"
 }
